# artifact-storage

./: .gitignore  Cargo.toml  docker-compose.yml  grafana-datasources.yaml  otel-collector-config.yaml
api/: Cargo.toml
api/src/: lib.rs  main.rs  routes.rs
api/src/dtos/: auth_dto.rs  file_dto.rs  test_dto.rs
api/src/handlers/: auth_handler.rs  file_handler.rs  mod.rs
api/src/services/: auth_service.rs
api/src/telemetry/: init.rs  metrics.rs
api/src/types/: app_state.rs  claims.rs  error.rs  keys.rs
garage/: garage.toml  garage_saas.toml
load-generator/: Dockerfile  locustfile.py  requirements.txt
rust-axum-app/: Cargo.toml  Dockerfile
rust-axum-app/.sqlx/: query-3b9366743f49e9b942d597c6498c8ad43271c6b5a5c4400c271fcd1ea3be74af.json  query-752219d6d04465c0e124da1142f6c2d2907bb52068489f63eade25dd9729a9cf.json
rust-axum-app/api/: Cargo.toml
rust-axum-app/api/src/: main.rs  routes.rs
rust-axum-app/api/src/dtos/: file_dto.rs  mod.rs  user_dto.rs
rust-axum-app/api/src/handlers/: file_handler.rs  mod.rs  user_handler.rs
rust-axum-app/api/src/telemetry/: init.rs
rust-axum-app/api/src/types/: app_state.rs  error.rs  mod.rs
rust-axum-app/multiplexer/: Cargo.toml
rust-axum-app/multiplexer/src/: lib.rs
rust-axum-app/shared/: Cargo.toml
rust-axum-app/shared/queries/artifact_metadata/: find_artifact_metadata_by_url.sql  upsert.sql
rust-axum-app/shared/src/: db.rs  error.rs  lib.rs  models.rs  s3_client.rs
rust-axum-app/shared/src/repositories/: artifact_metadata_repository.rs  mod.rs
scripts/: generate_load_testing_data.sh
shared/: Cargo.toml
shared/migrations/: 20260605211757_create_artifact_metadata_table.down.sql  20260605211757_create_artifact_metadata_table.up.sql  20260610154352_create_checksum_etag_contraints.down.sql  20260610154352_create_checksum_etag_contraints.up.sql
shared/queries/artifact_metadata/: upsert.sql
shared/src/: db.rs  lib.rs  s3_client.rs  sled_impl.rs
shared/src/repositories/: artifact_metadata_repository.rs
