[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
serde_json = "1.0.150"
axum-extra = { version = "0.12.6", features = ["typed-header", "query"] }
thiserror = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6.6", features = ["cors", "trace", "request-id"] }
tower = { version = "0.5.1", features = ["full"] }
sled = "0.34.7"
minio = { workspace = true }
futures = "0.3.32"
bytes = { workspace = true }
