[workspace]
resolver = "3"

members = ["api", "multiplexer", "shared"]
[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
serde = "1.0.228"
sqlx = { version = "0.8.0", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "tls-native-tls",
] }
thiserror = { version = "2.0.18" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "local-time",
  "registry",
] }
dotenvy = "0.15"
minio = "0.4.0"
axum = { version = "0.8.9", features = ["macros"] }
bytes = { version = "1.11.1" }
axum-extra = { version = "0.12.6", features = ["query"] }
sha2 = "0.10"
md5 = "0.8.0"
