[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
multiplexer = { path = "../multiplexer" }
axum = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

axum-extra = { version = "0.12.6", features = ["typed-header", "query"] }
thiserror = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6.8", features = ["cors", "trace", "request-id"] }
tower = { version = "0.5.2", features = ["full"] }
futures = "0.3.32"
bytes = { workspace = true }
sha2 = { workspace = true }
tokio-stream = "0.1.18"
opentelemetry = { version = "0.32.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.32.0", features = [
  "trace",
  "metrics",

  "rt-tokio",
] }
opentelemetry-stdout = { version = "0.32.0", features = ["trace", "metrics"] }
opentelemetry-appender-tracing = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", features = [
  "grpc-tonic",
  "metrics",
] }

tracing-opentelemetry = "0.33"

anyhow = "1.0.103"
md5 = { workspace = true }
dashmap = "6.2.1"
aws-sdk-s3 = { workspace = true }
tokio-util = { version = "0.7.18", features = ["io"] }
serde_json = { workspace = true }
